--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -118,7 +118,15 @@
         android:layout_marginTop="14dp"
         android:layout_marginRight="40dp"
         android:text="Sign in with Facebook"  />
-
+<TextView
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:textSize="20dp"
+    android:textColor="@color/colorPrimary"
+    android:text="not registered? Register"
+    android:layout_marginLeft="40dp"
+    android:layout_marginTop="20dp"
+    android:id="@+id/register_label"/>
     <Button
         android:id="@+id/button4"
         android:layout_width="match_parent"
@@ -127,7 +135,6 @@
         android:layout_marginTop="40dp"
         android:background="@drawable/roundedbuttonbg"
         android:layout_marginLeft="100dp"
-
         android:textColor="#ffffff"
         android:textStyle="bold"
 
