--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -11,6 +11,7 @@
     android:layout_gravity="center"
     android:id="@+id/home_lin"
     android:gravity="top"
+    android:layout_marginTop="20dp"
     android:orientation="vertical" >
 
     <!---->
