--- a/app/src/main/res/layout/activity_register2.xml
+++ b/app/src/main/res/layout/activity_register2.xml
@@ -6,43 +6,43 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Timeentry">
-    <!--<android.support.v7.widget.Toolbar-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:background="@color/colorPrimary"-->
-        <!--android:minHeight="?attr/actionBarSize"-->
-        <!--android:id="@+id/toolbar"-->
-        <!--&gt;-->
+    <android.support.v7.widget.Toolbar
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/colorPrimary"
+        android:minHeight="?attr/actionBarSize"
+        android:id="@+id/toolbar"
+        >
 
-    <!--</android.support.v7.widget.Toolbar>-->
-
-
+    </android.support.v7.widget.Toolbar>
 
 
 
-    <!--<ImageView-->
-        <!--android:id="@+id/imageView3"-->
-        <!--android:layout_width="20dp"-->
-        <!--android:layout_height="20dp"-->
-        <!--android:layout_alignParentStart="true"-->
-        <!--android:layout_alignParentTop="true"-->
-        <!--android:layout_marginTop="12dp"-->
-        <!--android:layout_marginLeft="12dp"-->
-        <!--app:srcCompat="@drawable/back" />-->
 
-    <!--<ImageView-->
-        <!--android:id="@+id/imageView4"-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:layout_alignParentEnd="true"-->
-        <!--android:layout_marginRight="10dp"-->
-        <!--android:layout_alignTop="@+id/imageView3"-->
-        <!--app:srcCompat="@drawable/menu" />-->
+
+    <ImageView
+        android:id="@+id/imageView3"
+        android:layout_width="20dp"
+        android:layout_height="20dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="12dp"
+        android:layout_marginLeft="12dp"
+        app:srcCompat="@drawable/back" />
+
+    <ImageView
+        android:id="@+id/imageView4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_marginRight="10dp"
+        android:layout_alignTop="@+id/imageView3"
+        app:srcCompat="@drawable/menu" />
 
 
     <android.support.v4.widget.NestedScrollView android:layout_height="match_parent"
         android:layout_width="match_parent"
-
+        android:layout_marginTop="?attr/actionBarSize"
         xmlns:android="http://schemas.android.com/apk/res/android">
         <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -50,6 +50,7 @@
             android:layout_height="fill_parent"
             android:background="@android:color/transparent"
             android:id="@+id/home_lin"
+
             android:gravity="top"
             android:orientation="vertical" >
 
@@ -157,20 +158,20 @@
                             <!--android:textSize="15dp"-->
                             <!--android:textColor="@color/colorPrimary"/>-->
 
-                        <!--<Button-->
-                            <!--android:id="@+id/reg_next_two"-->
-                            <!--android:layout_width="match_parent"-->
-                            <!--android:layout_height="wrap_content"-->
-                            <!--android:text="Next"-->
-                            <!--android:layout_marginTop="40dp"-->
-                            <!--android:background="@drawable/roundedbuttonbg"-->
-                            <!--android:layout_marginLeft="20dp"-->
+                        <Button
+                            android:id="@+id/reg_next_two"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:text="Next"
+                            android:layout_marginTop="40dp"
+                            android:background="@drawable/roundedbuttonbg"
+                            android:layout_marginLeft="20dp"
 
-                            <!--android:textColor="#ffffff"-->
-                            <!--android:textStyle="bold"-->
+                            android:textColor="#ffffff"
+                            android:textStyle="bold"
 
-                            <!--android:layout_marginRight="20dp"-->
-                            <!--android:layout_marginBottom="50dp"/>-->
+                            android:layout_marginRight="20dp"
+                            android:layout_marginBottom="50dp"/>
 
                     </android.support.design.widget.TextInputLayout>
                 </android.support.design.widget.TextInputLayout>
