--- a/app/src/main/res/layout/activity_clockin2.xml
+++ b/app/src/main/res/layout/activity_clockin2.xml
@@ -57,74 +57,85 @@
             android:textSize="30dp"/>
     </LinearLayout>
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="250dp"
-        android:background="#ffffff"
-        android:orientation="vertical"
+    <!--<LinearLayout-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="250dp"-->
+        <!--android:background="#ffffff"-->
+        <!--android:orientation="vertical"-->
 
-        >
+        <!--&gt;-->
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="wed dec 26 2018"
-            android:layout_gravity="center"
-            android:textColor="@color/colorPrimary"
-            android:layout_marginTop="16dp"
-            android:textSize="18dp"/>
+        <!--<TextView-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:text="wed dec 26 2018"-->
+            <!--android:layout_gravity="center"-->
+            <!--android:textColor="@color/colorPrimary"-->
+            <!--android:layout_marginTop="16dp"-->
+            <!--android:textSize="18dp"/>-->
 
-        <android.support.v7.widget.CardView
-            xmlns:card_view="http://schemas.android.com/apk/res-auto"
-            android:id="@+id/card_view_outer"
+        <!--<android.support.v7.widget.CardView-->
+            <!--xmlns:card_view="http://schemas.android.com/apk/res-auto"-->
+            <!--android:id="@+id/card_view_outer"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="70dp"-->
+            <!--android:layout_marginTop="20dp"-->
+            <!--card_view:cardBackgroundColor="#d6f9e9"-->
+            <!--card_view:cardCornerRadius="40dp"-->
+            <!--android:layout_marginLeft="20dp"-->
+            <!--android:layout_marginRight="20dp"-->
+            <!--card_view:cardElevation="6dp" >-->
+
+            <!--<TextView-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:text="Take a break"-->
+                <!--android:layout_gravity="center"-->
+                <!--android:textColor="#e09d02"-->
+                <!--android:layout_marginTop="16dp"-->
+                <!--android:layout_marginBottom="20dp"-->
+                <!--android:textStyle="bold"-->
+                <!--android:textSize="25dp"/>-->
+
+        <!--</android.support.v7.widget.CardView>-->
+
+        <!--<android.support.v7.widget.CardView-->
+            <!--xmlns:card_view="http://schemas.android.com/apk/res-auto"-->
+
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="70dp"-->
+            <!--android:layout_marginTop="20dp"-->
+            <!--card_view:cardBackgroundColor="#d6f9e9"-->
+            <!--card_view:cardCornerRadius="40dp"-->
+            <!--android:layout_marginLeft="20dp"-->
+            <!--android:layout_marginRight="20dp"-->
+            <!--card_view:cardElevation="6dp" >-->
+
+            <!--<TextView-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:text="Clock out"-->
+                <!--android:layout_gravity="center"-->
+                <!--android:textColor="#f74311"-->
+                <!--android:layout_marginTop="16dp"-->
+                <!--android:layout_marginBottom="20dp"-->
+                <!--android:textStyle="bold"-->
+                <!--android:textSize="25dp"/>-->
+
+        <!--</android.support.v7.widget.CardView>-->
+
+    <!--</LinearLayout>-->
+
+
+        <android.support.v4.view.ViewPager
+            android:id="@+id/frag_holder"
             android:layout_width="match_parent"
-            android:layout_height="70dp"
-            android:layout_marginTop="20dp"
-            card_view:cardBackgroundColor="#d6f9e9"
-            card_view:cardCornerRadius="40dp"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
-            card_view:cardElevation="6dp" >
+            android:layout_height="250dp"
+            />
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Take a break"
-                android:layout_gravity="center"
-                android:textColor="#e09d02"
-                android:layout_marginTop="16dp"
-                android:layout_marginBottom="20dp"
-                android:textStyle="bold"
-                android:textSize="25dp"/>
 
-        </android.support.v7.widget.CardView>
 
-        <android.support.v7.widget.CardView
-            xmlns:card_view="http://schemas.android.com/apk/res-auto"
 
-            android:layout_width="match_parent"
-            android:layout_height="70dp"
-            android:layout_marginTop="20dp"
-            card_view:cardBackgroundColor="#d6f9e9"
-            card_view:cardCornerRadius="40dp"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
-            card_view:cardElevation="6dp" >
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Clock out"
-                android:layout_gravity="center"
-                android:textColor="#f74311"
-                android:layout_marginTop="16dp"
-                android:layout_marginBottom="20dp"
-                android:textStyle="bold"
-                android:textSize="25dp"/>
-
-        </android.support.v7.widget.CardView>
-
-    </LinearLayout>
         <View
             android:layout_width="match_parent"
             android:layout_height="2dp"
