--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -26,12 +26,13 @@
         android:id="@+id/textView2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Welcome To"
-        android:gravity="center"
-        android:textSize="28dp"
-        android:textStyle="bold"
         android:layout_marginTop="8dp"
-        android:textColor="@color/colorPrimary"/>
+        android:fontFamily="@font/roboto"
+        android:gravity="center"
+        android:text="Welcome To"
+        android:textColor="@color/colorPrimary"
+        android:textSize="28dp"
+        android:textStyle="bold"/>
 
     <ImageView
         android:id="@+id/imageView"
@@ -46,12 +47,13 @@
         android:id="@+id/textView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Mobile Workforce"
-        android:gravity="center"
-        android:textSize="18dp"
-        android:textStyle="bold"
         android:layout_marginTop="8dp"
-        android:textColor="@color/colorPrimary"/>
+        android:fontFamily="@font/roboto"
+        android:gravity="center"
+        android:text="Mobile Workforce"
+        android:textColor="@color/colorPrimary"
+        android:textSize="18dp"
+        android:textStyle="bold"/>
 
     <android.support.design.widget.TextInputLayout
         android:layout_width="match_parent"
